src/style.css
[data-theme='light'] {
  --background: #fff;
  --color: #000;
  --theme-color: #000;
  --shadow: #8888;
}

[data-theme='dark'] {
  --background: #000;
  --color: #fff;
  --theme-color: #fff;
  --shadow: #8888;
}

:root {
  --grey: #888;
  background: var(--background);
  color: var(--color);
  --safe-top: env(safe-area-inset-top);
  --safe-bottom: env(safe-area-inset-bottom);
  --usable-vh: calc((100vh - var(--safe-top) - var(--safe-bottom)) / 100);
  --transition-duration: 666ms; /* Initialize variable for transition duration */
}

*::selection,
*::-moz-selection,
*::-webkit-selection {
  background: var(--color);
  color: var(--background);
}

* {
  box-sizing: border-box;
  font-family: 'Sanserifing';
  line-height: 100%;
  font-optical-sizing: auto;
  scroll-behavior: smooth;
  -webkit-overflow-scrolling: touch; /* For smooth scrolling on iOS */
  -moz-overflow-scrolling: touch; /* Mozilla-specific smooth scrolling */

  transition: background-color var(--transition-duration),
    /* Background color */ border var(--transition-duration),
    /* Border */ border-color var(--transition-duration),
    /* Border color */ border-radius var(--transition-duration),
    /* Border radius */ box-shadow var(--transition-duration),
    /* Box shadow */ opacity var(--transition-duration),
    /* Opacity */ transform var(--transition-duration),
    /* Transform (scale, rotate, etc.) */ width var(--transition-duration),
    /* Width */ height var(--transition-duration),
    /* Height */ max-width var(--transition-duration),
    /* Max width */ max-height var(--transition-duration),
    /* Max height */ min-width var(--transition-duration),
    /* Min width */ min-height var(--transition-duration),
    /* Min height */ margin var(--transition-duration),
    /* Margin */ padding var(--transition-duration),
    /* Padding */ left var(--transition-duration),
    /* Left position */ right var(--transition-duration),
    /* Right position */ top var(--transition-duration),
    /* Top position */ bottom var(--transition-duration),
    /* Bottom position */ z-index var(--transition-duration),
    /* Z-index (note: z-index transition might not have visual effect) */ filter
      var(--transition-duration),
    /* Filter (blur, brightness, etc.) */ -webkit-filter var(--transition-duration),
    /* Webkit Filter */ visibility var(--transition-duration),
    /* Visibility */ white-space var(--transition-duration),
    /* White space */ line-height var(--transition-duration),
    /* Line height */ font-size var(--transition-duration),
    /* Font size */ transform-origin var(--transition-duration),
    /* Transform origin */ clip-path var(--transition-duration),
    /* Clip path */ object-fit var(--transition-duration),
    /* Object fit */ cursor var(--transition-duration),
    /* Cursor */ transition-delay var(--transition-duration),
    /* Delay of transition */ transition-timing-function
      var(--transition-duration);
    /* Timing function */

  -moz-transition: background-color var(--transition-duration),
    /* Background color */ border var(--transition-duration),
    /* Border */ border-color var(--transition-duration),
    /* Border color */ border-radius var(--transition-duration),
    /* Border radius */ box-shadow var(--transition-duration),
    /* Box shadow */ opacity var(--transition-duration),
    /* Opacity */ transform var(--transition-duration),
    /* Transform (scale, rotate, etc.) */ width var(--transition-duration),
    /* Width */ height var(--transition-duration),
    /* Height */ max-width var(--transition-duration),
    /* Max width */ max-height var(--transition-duration),
    /* Max height */ min-width var(--transition-duration),
    /* Min width */ min-height var(--transition-duration),
    /* Min height */ margin var(--transition-duration),
    /* Margin */ padding var(--transition-duration),
    /* Padding */ left var(--transition-duration),
    /* Left position */ right var(--transition-duration),
    /* Right position */ top var(--transition-duration),
    /* Top position */ bottom var(--transition-duration),
    /* Bottom position */ z-index var(--transition-duration),
    /* Z-index (note: z-index transition might not have visual effect) */ filter
      var(--transition-duration),
    /* Filter (blur, brightness, etc.) */ -moz-filter var(--transition-duration),
    /* Moz Filter */ visibility var(--transition-duration),
    /* Visibility */ white-space var(--transition-duration),
    /* White space */ line-height var(--transition-duration),
    /* Line height */ font-size var(--transition-duration),
    /* Font size */ transform-origin var(--transition-duration),
    /* Transform origin */ clip-path var(--transition-duration),
    /* Clip path */ object-fit var(--transition-duration),
    /* Object fit */ cursor var(--transition-duration),
    /* Cursor */ transition-delay var(--transition-duration),
    /* Delay of transition */ transition-timing-function
      var(--transition-duration);
    /* Timing function */
}

@media (orientation: portrait) {
  :root {
    font-size: calc(2 * var(--usable-vh));
  }
}
@media (orientation: landscape) {
  :root {
    font-size: calc(2 * var(--usable-vh));
  }
}

body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100vh;
  background: var(--background);
  color: var(--color);
}

#app {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100vh;
  text-align: center;
}

a:link,
a:visited,
a:hover,
a:active {
  color: inherit;
}

a.router-link-active {
  background: var(--color);
  color: var(--background);
}

a.router-link-active svg {
  stroke: var(--background);
}

header a,
footer a {
  display: flex;
  align-items: center;
  justify-content: center;
}

header a {
  flex-direction: column;
  padding: 0.5rem;
}

header a:hover,
footer a:hover {
  background: var(--color);
  color: var(--background);
}

header a:hover svg,
footer a:hover svg {
  stroke: var(--background);
}

header nav a span {
  position: relative;
  text-align: center;
  font-size: 66%;
  letter-spacing: 0.42ch;
  padding-left: 0.94ch;
  padding-top: 0.21em;
  top: -0.1em;
}

a.router-link-active span,
a:not(.router-link-active):hover span {
  border: 2px solid var(--background);
}

a:not(.router-link-active) span {
  border: 2px solid var(--color);
}

header nav li a svg:not(#logoImage),
footer a svg {
  width: 2rem;
  height: 2rem;
}

header,
footer {
  width: 100%;
  z-index: 1;
  box-shadow: 0 0 1rem 0.5rem var(--shadow);
  background: var(--background);
}

header {
  height: 5.5rem;
}

#logoImage {
  stroke: currentColor;
}

header,
main,
footer {
  position: fixed;
}

main {
  width: 100%;
  height: 42.5rem;
  top: 5rem;
  overflow-x: hidden;
  overflow-y: auto;
}

footer {
  height: 2.75rem;
}

/* Клас для примусового оновлення стилів */
.force-redraw {
  transform: scale(1); /* Будь-яка зміна для примусового рендерінгу */
  overflow: hidden;
}

main::-webkit-scrollbar,
textarea::-webkit-scrollbar {
  width: 0.5rem;
}

main::-webkit-scrollbar-thumb,
textarea::-webkit-scrollbar-thumb {
  background-color: var(--grey);
  border-radius: 0.25rem;
  -webkit-border-radius: 0.25rem;
  -moz-border-radius: 0.25rem;
  -ms-border-radius: 0.25rem;
  -o-border-radius: 0.25rem;
}

main::-webkit-scrollbar-track,
textarea::-webkit-scrollbar-track {
  background-color: var(--background);
}

main::-webkit-scrollbar-thumb:hover,
textarea::-webkit-scrollbar-thumb:hover {
  background-color: var(--color);
}

main::-webkit-scrollbar-track:hover,
textarea::-webkit-scrollbar-track:hover {
  background-color: var(--shadow);
}

